Add archives closure thing

--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,10 @@ jar {
     }
 }
 
+artifacts {
+    archives sourcesJar
+}
+
 task sourcesJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
     from sourceSets.main.allSource
